--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,3 +46,4 @@ tree_hash_derive = { path = "eth2/utils/tree_hash_derive" }
 eth2_ssz = { path = "eth2/utils/ssz" }
 eth2_ssz_derive = { path = "eth2/utils/ssz_derive" }
 eth2_ssz_types = { path = "eth2/utils/ssz_types" }
+leveldb = { git = 'https://github.com/jtomanik/leveldb' }
